Añadidos control de login mediante jstl en login.jsp añadidos links sólo para el administrador en login.jsp y respuesta.jsp Adaptado controlador FormularioServlet para control de errores, creación de sesion y cierre de sesión. Añadido enlace para cierre de sesión en respuesta.jsp Añadido filtro SessionFilter para mostrar log por consola sobre acciones en la sesión.

--- a/ProyectoPrueba/README
+++ b/ProyectoPrueba/README
@@ -8,10 +8,13 @@
     
 ## Estado actual:
    
-    Comunicación entre jsps y Servlets y presentación a través de JSTL.
+    * Comunicación entre jsps y Servlets y presentación a través de JSTL.
+    * Añadido objeto de comprobación de errores
+    * Añadidas Sesiones y Filtros de ejemplo
+    * Añadido el cierre de sesión y retorno al login
    
 ## Entorno
 
    * Desarrollado con Eclipse Indigo, jdk 1.6 y tomcat 6.
-   * Es posible que si dispones de otro entorno diferente eclipse muestre algunos errores en el proyecto. Para ello cambia los facets del proyecto (Menú propiedades del proyecto-&gt;Project Facets) ahí puede elegir en la pestaña Runtime el servidor que tengas instalado y en la opción java cambiar el jdk.
+   * Es posible que si dispones de otro entorno diferente eclipse muestre algunos errores en el proyecto. Para ello cambia los facets del proyecto (Menú propiedades del proyecto->Project Facets) ahí puedes elegir en la pestaña Runtime el servidor que tengas instalado y en la opción java cambiar el jdk.
    
